# RustDocumenter

./: CLAUDE.md  Cargo.toml  README.md
man/: MANIFEST.json  MANIFEST.md
man/rustdoc-viewer/src/: main.json  main.md
man/rustdocumenter/src/: generator.json  generator.md  main.json  main.md  manifest.json  manifest.md  parser.json  parser.md
proj/: ISSUES
rustdoc-viewer/: Cargo.toml
rustdoc-viewer/src/: main.rs
rustdocumenter/: Cargo.toml
rustdocumenter/src/: ai.rs  generator.rs  lib.rs  main.rs  manifest.rs  parser.rs
rustdocumenter/src/cmd/: check.rs  diag.rs  doc.rs  gen.rs  mod.rs
rustdocumenter/src/docgen/: file_processor.rs  inserter.rs  item_processor.rs  mod.rs
rustdocumenter/src/gateway/: ai_runners.rs  fs.rs  mod.rs
scripts/: rustman  rustman.bat  slintman  slintman.bat
