[package]
name = "rustdoc-viewer"
version = "0.1.0"
edition = "2021"
description = "Slint GUI viewer for rustdocumenter man/ documentation"
license = "MIT"
repository = "https://github.com/lpmwfx/RustDocumenter"

[[bin]]
name = "rustdoc-viewer"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slint = "1"
slint-ui-templates = { git = "https://github.com/lpmwfx/SlintUITemplates", branch = "aidevops/scaffolding" }
