[package]
name = "rustdocumenter"
version = "0.1.0"
edition = "2021"
description = "Extracts /// doc comments from Rust and Slint files and writes structured man/ documentation"
license = "MIT"
repository = "https://github.com/lpmwfx/RustDocumenter"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rustdocumenter"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
